--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MealsOrdering">
-        <activity android:name=".RegisterActivity"></activity>
-        <activity android:name=".LoginAcitivty"></activity>
+        <activity android:name=".PasswordActivity"></activity>
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".LoginAcitivty" />
         <activity
             android:name=".HomeActivity"
             android:label="@string/title_activity_home"
